# oxyserve

./: Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml
.github/workflows/: publish.yml
src/: catcher.rs  config.rs  fileserver.rs  helpers.rs  main.rs
src/helpers/: markdown.rs  notes.rs  svg.rs  util.rs
static/: style.css
templates/: page.html.hbs
