[package]
name = "oxyserve"
version = "0.1.0"
authors = ["andi-makes <26302678+andi-makes@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
publish = false
description = "Source code for my website andi-makes.dev"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_json = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]