[package]
name = "oxyserve"
version = "0.1.0"
authors = ["andi-makes <andi@andi-makes.dev>"]
edition = "2018"
license = "MIT"
publish = false
description = "Source code for my website andi-makes.dev"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
regex = "1"
actix-web = "3"
actix-files = "0.3"
actix-http = "2"

[dependencies.handlebars]
version="4.1"
features=["dir_source"]

[dependencies.pulldown-cmark]
version = "0.9"
default-features = false
