[package]
name = "oxyserve"
version = "0.1.0"
authors = ["andi-makes <andi@andi-makes.dev>"]
edition = "2018"
license = "MIT"
publish = false
description = "Source code for my website andi-makes.dev"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
regex = "1.5.5"
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-http = "3.0.4"

[dependencies.handlebars]
version="4.1"
features=["dir_source"]

[dependencies.pulldown-cmark]
version = "0.9"
default-features = false
